@@ -6,12 +6,12 @@
 
     <artifactId>leaflet-bridge</artifactId>
     <packaging>pom</packaging>
-    <version>3.4.2</version>
+    <version>3.5.0</version>
 
     <parent>
         <groupId>hu.psprog.leaflet</groupId>
         <artifactId>leaflet-stack-base-bom</artifactId>
-        <version>2.1-r2302.1</version>
+        <version>3.0-r2305.1</version>
     </parent>
 
     <modules>
@@ -24,7 +24,7 @@
     <properties>
 
         <!-- Java environment version -->
-        <java.version>11</java.version>
+        <java.version>17</java.version>
 
         <!-- overrides for leaflet internal libs -->
         <leaflet.bridge.version>${project.version}</leaflet.bridge.version>
@@ -120,12 +120,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--add-exports</arg>
-                        <arg>com.fasterxml.jackson.jaxrs.json/com.fasterxml.jackson.jaxrs.json=leaflet.component.bridge.integration.spring</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
         </plugins>
     </build>
